# ZRO

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  instructions.md  roadmap.md  run.sh  test_e2e.sh  todo.md
apps/browser/: manifest.toml
apps/browser/backend/: Cargo.toml
apps/browser/backend/src/: main.rs
apps/browser/frontend/: app.css  app.js  index.html
apps/calculator/: manifest.toml
apps/calculator/frontend/: app.css  app.js  index.html
apps/camera/: manifest.toml
apps/camera/frontend/: app.css  app.js  index.html
apps/custom-shell/: manifest.toml
apps/custom-shell/backend/: Cargo.toml
apps/custom-shell/backend/src/: main.rs
apps/custom-shell/frontend/: desktop.js  index.html  keybindings.js  launcher.js  style.css  taskbar.js  window-manager.js
apps/echo/: manifest.toml
apps/echo/backend/: Cargo.toml
apps/echo/backend/src/: main.rs
apps/echo/frontend/: index.html
apps/files/: manifest.toml
apps/files/backend/: Cargo.toml
apps/files/backend/src/: main.rs
apps/files/frontend/: app.css  app.js  index.html
apps/monitor/: manifest.toml
apps/monitor/backend/: Cargo.toml
apps/monitor/backend/src/: main.rs
apps/monitor/frontend/: app.css  app.js  index.html
apps/notes/: manifest.toml
apps/notes/backend/: Cargo.toml
apps/notes/backend/src/: main.rs
apps/notes/frontend/: app.css  app.js  index.html
apps/screenshot/: manifest.toml
apps/screenshot/frontend/: app.css  app.js  index.html
apps/settings/: manifest.toml
apps/settings/backend/: Cargo.toml
apps/settings/backend/src/: main.rs
apps/settings/frontend/: app.css  app.js  index.html
apps/shell/: manifest.toml
apps/shell/backend/: Cargo.toml
apps/shell/backend/src/: main.rs
apps/shell/frontend/: desktop.js  index.html  launcher.js  style.css  taskbar.js  window-manager.js
apps/tasks/: manifest.toml
apps/tasks/backend/: Cargo.toml
apps/tasks/backend/src/: main.rs
apps/tasks/frontend/: app.css  app.js  index.html
apps/terminal/: manifest.toml
apps/terminal/backend/: Cargo.toml
apps/terminal/backend/src/: main.rs
apps/terminal/frontend/: app.css  app.js  index.html
cli/: Cargo.toml
cli/src/: client.rs  main.rs  output.rs  staging.rs
config/: permissions.toml  runtime.toml  users.toml
config/jwt_keys/: private.pem  public.pem
data/: zro.db  zro.db-shm  zro.db-wal
data/browser/: history.json
data/files/: README.txt
data/files/Projects/: notes.md
data/notes/notes/: 221610d6-0d20-4a99-a3b6-dfcd0268105d.json  308fa017-8538-4ff3-a977-88dfc3d7ffa2.json  5d79ba60-621b-4216-b4ed-33a6befdbc9a.json  6399be40-962d-4259-8b36-fc641a4625b2.json  87eaebcb-1dd6-4741-92a9-c545ad9b7a88.json  a44a9b98-4559-4397-92f4-41c6143c9a33.json  a4df2d47-5502-464c-b535-ed79d84bc25f.json  a9f23688-f726-435d-8a73-a8358ec76f3d.json  cd3a0c35-0bf1-4682-ae37-7601561739f7.json
data/settings/: kv.json
data/tasks/: tasks.json
docs/: app-guide.md  architecture.md  backend-sdk.md  configuration.md  deployment.md  frontend-sdk.md  plan-service-cli.md
planification/: 01-desktop-environment.md  02-applications.md  03-roadmap.md  04-framework-changes.md
protocol/: Cargo.toml
protocol/src/: constants.rs  errors.rs  lib.rs  manifest.rs  messages.rs  types.rs
protocol/tests/: protocol_tests.rs
runtime/: Cargo.toml
runtime/examples/: gen_hash.rs
runtime/src/: auth.rs  auth_ldap.rs  auth_pam.rs  auth_provider.rs  config.rs  control.rs  hot_reload.rs  jwt.rs  lib.rs  main.rs  permissions.rs  registry.rs  session.rs  supervisor.rs
runtime/src/gateway/: mod.rs  router.rs  state.rs
runtime/src/gateway/handlers/: apps.rs  auth.rs  desktop.rs  health.rs  mod.rs  notifications.rs  proxy.rs  static_files.rs  system.rs  websocket.rs
runtime/src/gateway/middleware/: auth_mw.rs  mod.rs  security.rs
runtime/src/ipc/: channel.rs  mod.rs  router.rs  server.rs
runtime/src/migrations/: 001_init.sql  002_desktop.sql
runtime/src/storage/: mod.rs  notification_store.rs  preference_store.rs  session_store.rs  state_store.rs  token_store.rs
runtime/tests/: gateway_tests.rs
scripts/: build.sh  dev.sh  dump.sh  fetch-xterm.sh  install.sh  test.sh
sdks/frontend/: README.md  package-lock.json  package.json  tsconfig.json
sdks/frontend/scripts/: build.js  new-module.js
sdks/frontend/src/: browser.ts  client.ts  index.ts  worker.ts
sdks/frontend/src/core/: index.ts  registry.ts  types.ts
sdks/frontend/src/modules/: clipboard.ts  connection.ts  dev.ts  dnd.ts  form.ts  (+16 more)
sdks/nodejs/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
sdks/nodejs/dist-test/: app.d.ts  app.d.ts.map  app.js  app.js.map  context.d.ts  context.d.ts.map  context.js  context.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  ipc.d.ts  ipc.d.ts.map  ipc.js  ipc.js.map  protocol.d.ts  protocol.d.ts.map  protocol.js  protocol.js.map  types.d.ts  types.d.ts.map  types.js  types.js.map
sdks/nodejs/scripts/: new-module.js
sdks/nodejs/src/: app.ts  context.ts  index.ts  ipc.ts  module.ts  protocol.ts  types.ts
sdks/nodejs/tests/: app.test.ts  module.test.ts  protocol.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/scripts/: new_module.py
sdks/python/src/zro_sdk/: __init__.py  app.py  context.py  ipc.py  module.py  protocol.py
sdks/python/src/zro_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdks/python/src/zro_sdk/modules/: __init__.py  dev.py  files.py  ipc.py  lifecycle.py  notifications.py  state.py  system.py
sdks/python/tests/: test_sdk.py
sdks/rust/: Cargo.toml
sdks/rust/macros/: Cargo.toml
sdks/rust/macros/src/: lib.rs
sdks/rust/scripts/: new-module.sh
sdks/rust/src/: app.rs  context.rs  handlers.rs  ipc_client.rs  lib.rs  module.rs
sdks/rust/src/modules/: dev.rs  files.rs  ipc.rs  lifecycle.rs  mod.rs  notifications.rs  state.rs  system.rs
sdks/rust/tests/: sdk_tests.rs
static/: zro-base.css  zro-client.js  zro-client.js.bak  zro-client.js.map  zro-shared-worker.js  zro-shared-worker.js.map
system/: zro-runtime.service  zro.sysusers  zro.tmpfiles
(+24 files in other folders)
