[workspace]
resolver = "2"
members = [
    "protocol",
    "runtime",
    "cli",
    "sdks/rust",
    "sdks/rust/macros",
    "apps/notes/backend",
    "apps/files/backend",
    "apps/terminal/backend",
    "apps/tasks/backend",
    "apps/shell/backend",
    "apps/custom-shell/backend",
    "apps/settings/backend",
    "apps/monitor/backend",
    "apps/browser/backend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
base64 = "0.22"
