[package]
name = "zro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for managing the ZRO web desktop environment"

[[bin]]
name = "zro"
path = "src/main.rs"

[dependencies]
zro-protocol = { path = "../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"
rand = "0.8"
tabled = "0.17"
flate2 = "1"
tar = "0.4"
toml = { workspace = true }
libc = "0.2"
