[package]
name = "zro-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and IPC protocol for the zro framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
regex-lite = "0.1"
