[package]
name = "zro-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Central runtime and gateway for the zro framework"

[dependencies]
zro-protocol = { path = "../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "set-header"] }
hyper = { version = "1", features = ["full"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = "9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
async-trait = "0.1"
notify = "6"
sd-notify = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
# Optional PAM support
pam = { version = "0.8", optional = true }
nix = { version = "0.29", features = ["user"], optional = true }
# Optional LDAP support
ldap3 = { version = "0.11", optional = true }

[features]
default = []
pam = ["dep:pam", "dep:nix"]
ldap = ["dep:ldap3"]

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.26.0"
