[package]
name = "zro-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Backend SDK for building zro applications"

[dependencies]
zro-protocol = { path = "../../protocol" }
zro-sdk-macros = { path = "macros" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
