[package]
name = "zro-app-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web browser application for zro"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
