[package]
name = "zro-app-custom-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Custom Shell Desktop — Your own ZRO desktop environment"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
