[package]
name = "zro-app-echo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Echo test application for zro — exercises all SDK features"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
