[package]
name = "zro-app-files"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File explorer application for zro"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
