[package]
name = "zro-app-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZRO Shell Desktop — Window Manager application"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
