[package]
name = "zro-app-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web terminal application for zro"

[dependencies]
zro-sdk = { path = "../../../sdks/rust" }
zro-protocol = { path = "../../../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.8"
